DeploymentStaging/deployPackage/objects/HOG_Cause__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cause_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Failure Cause Code</description>
        <label>Cause Code</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cause_Description__c</fullName>
        <description>Failure Cause</description>
        <label>Cause Description</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Group__c</fullName>
        <label>Code Group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Cause</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cause_Code__c</columns>
        <columns>Cause_Description__c</columns>
        <columns>Code_Group__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Causes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>